Add multiple trsutees